--- a/Analiza Pokemonów.ipynb
+++ b/Analiza Pokemonów.ipynb
@@ -3359,7 +3359,7 @@
     "        print(f\"    Edge color: {bar.get_edgecolor()}\")\n",
     "        print(f\"    Face color: {bar.get_facecolor()}\")\n",
     "        if j >=5:\n",
-    "            breakś\n",
+    "            break\n",
     "        else:\n",
     "            continue"
    ]
